linux (4.17~rc3-1~exp2) UNRELEASED; urgency=medium

  [ Luca Boccassi ]
  * Disable building linux-doc-* and tools documentation when the "nodoc"
    build profile is used.

  [ John Paul Adrian Glaubitz ]
  * [m68k] Enable CONFIG_PATA_GAYLE as module.

 -- Luca Boccassi <bluca@debian.org>  Wed, 02 May 2018 12:59:01 +0100

linux (4.17~rc3-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Ben Hutchings ]
  * [amd64] Drop our patch "Don't WARN about expected W+X pages on Xen"; the
    problem appears to have been fixed upstream
  * Drop our patch "Kbuild: kconfig: Verbose version of --listnewconfig";
    listnewconfig now shows symbol values by default
  * debian/rules.real: Stop enabling verbose output for listnewconfig target
  * Documentation: typec.rst: Use literal-block element with ascii art
  * Documentation: Update references to drivers/base/firmware_class.c
  * [armhf] Enable MTD_NAND_MARVELL as module, replacing MTD_NAND_PXA3xx
  * linux-kbuild: Update genksyms makefile to run flex and bison
  * Add support for building only versioned tools packages
  * Change generation of linux-doc, linux-source, linux-support package names

  [ Luca Boccassi ]
  * Build-Dep on libelf-dev even for nopython/notools builds to fix FTBFS,
    needed when CONFIG_STACK_VALIDATION and CONFIG_UNWINDER_ORC are enabled.

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 30 Apr 2018 00:13:06 +0100

linux (4.16.5-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.16.1
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.16.2
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.16.3
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.16.4
    - ext4: limit xattr size to INT_MAX (CVE-2018-1095)
    - random: fix crng_ready() test (CVE-2018-1108)
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.16.5

  [ Ben Hutchings ]