@@ -7,6 +7,9 @@ linux (4.17~rc3-1~exp2) UNRELEASED; urgency=medium
   [ John Paul Adrian Glaubitz ]
   * [m68k] Enable CONFIG_PATA_GAYLE as module.
 
+  [ Ben Hutchings ]
+  * Fix building only versioned tools packages
+
  -- Luca Boccassi <bluca@debian.org>  Wed, 02 May 2018 12:59:01 +0100
 
 linux (4.17~rc3-1~exp1) experimental; urgency=medium
